# GEAR-Seg

./: .gitignore  11_DeepSeek_question_wholo_fuction.py  GEAR-Seg-Dataset.py  GEAR-Seg-Reason.py  README.md  gear_dataset_generate.py  index.html  pyproject.toml  reason_seg1.py  requirements.txt  setup.py  utils copy.py
dam/: describe_anything_model.py
dam/model/: model_utils.py
demo/: get_descriptions.py
outputs/reasonseg_task/ReasonSeg_val/answers/json/: 4220420_7397afecdb_o.json  4537339_3d8e488294_o.json  4971354_aa8650671a_o.json
outputs/reasonseg_task/ReasonSeg_val/dam/descriptions/: 3417356_b6f97b6b6e_o.json  4220420_7397afecdb_o.json
outputs/reasonseg_task/val/answers/json/: 3417356_b6f97b6b6e_o.json  5341048_99ce1e3559_o.json  692198_ac99d18ac5_o.json
outputs/reasonseg_task/val/dam/descriptions/: 4537339_3d8e488294_o.json  4971354_aa8650671a_o.json  5341048_99ce1e3559_o.json  692198_ac99d18ac5_o.json
utils/: dam_utils.py  gear_dataset copy.py  gear_dataset.py  llm_reasoning_utils.py  ollama_utils.py  reasonseg_dataset.py  sam_utils.py  utils.py
