[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gear-seg"
version = "1.0.0"
description = "GEAR-Seg: A Grounded Explainable Agent for Reasoning Segmentation and Data Engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
    "pydantic>=2.11.10",
    "numpy>=1.26.4",
    "pillow>=11.3.0",
    "gradio>=5.49.1",
    "requests>=2.32.5",
    "fastapi>=0.121.0",
    "opencv-python>=4.11.0",
    "openai>=2.7.1",
    "pycocotools>=2.0.11",
    "matplotlib>=3.10.7",
    "sentence-transformers>=5.1.2",
    "PyYAML>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "tokenizers>=0.19.1",
    "sentencepiece",
    "httpx",
    "uvicorn",
    "protobuf"
]

[project.urls]
"Homepage" = "https://github.com/AgRoboticsResearch/GEAR-Seg"
"Bug Tracker" = "https://github.com/AgRoboticsResearch/GEAR-Seg/issues"
